<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rutas"
            android:icon="@drawable/ic_rutas_logo"
            android:title="@string/rutas_descripcion" />
        <item
            android:id="@+id/nav_rutas_fav"
            android:icon="@drawable/ic_favoritos_logo"
            android:title="@string/rutas_descripcion_favoritos" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_logo"
            android:title="@string/mapa_descricion" />
    </group>

    <item android:title="@string/nav_preferencias_usuario">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/perfil" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartir_app" />
        </menu>
    </item>

</menu>
