<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/boton_mandar_valoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/mandar_valoracion"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_mandar_valoracion" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:id="@+id/contenedor_registrador_valoracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/contenedor_usuario_valoracion_registro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:textAppearance="@android:style/TextAppearance.Material.Headline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RatingBar
                        android:id="@+id/contenedor_barra_valoracion_registro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@+id/contenedor_usuario_valoracion_registro"
                        app:layout_constraintTop_toBottomOf="@+id/contenedor_usuario_valoracion_registro" />

                    <TextView
                        android:id="@+id/contenedor_puntuacion_valoracion_registro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maximo_num_estrellas"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/contenedor_editar_puntuacion_valoracion_registro"
                        app:layout_constraintStart_toEndOf="@+id/contenedor_editar_puntuacion_valoracion_registro"
                        app:layout_constraintTop_toTopOf="@+id/contenedor_editar_puntuacion_valoracion_registro" />

                    <EditText
                        android:id="@+id/contenedor_editar_puntuacion_valoracion_registro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="numberDecimal"
                        android:labelFor="@+id/contenedor_editar_puntuacion_valoracion_registro"
                        android:contentDescription="@string/puntacion_numerica_valoracion"
                        app:layout_constraintStart_toStartOf="@+id/contenedor_barra_valoracion_registro"
                        app:layout_constraintTop_toBottomOf="@+id/contenedor_barra_valoracion_registro"
                        tools:ignore="Autofill" />


                    <EditText
                        android:id="@+id/contenedor_descripcion_valoracion_registro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:inputType="text"
                        android:hint="@string/pista_valoracion_descripcion"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/contenedor_editar_puntuacion_valoracion_registro"
                        app:layout_constraintTop_toBottomOf="@+id/contenedor_editar_puntuacion_valoracion_registro"
                        tools:ignore="Autofill" />



                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>